style.css
body {
padding: 0;
margin: 0;
font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.section1 {
margin: 0;
padding: 0;
background-color: rgb(235, 119, 106);
min-height: 400px;
}

.header {
margin: 0;
padding-bottom: 50px;
color: #F9FAF8;
font-size: 24px;
font-weight: bold;
display: flex;
justify-content: space-around;
align-items: center;

}

a {
text-decoration: none;

}

ul {
display: flex;
font-size: 18px;
font-weight: 400;
align-items: center;
gap: 20px;
list-style-type: none;    
}

h1, p {
color: #F9FAF8;

}

h1 {

margin-bottom: 0px;
font-size: 48px;
font-weight: 900;

}

p {

margin-top: 0px;
font-size: 18px;    

}



.section1 img {
object-fit: cover;
height: 300px;
width: 400px;
flex-shrink: 1;
}

.content {
display: flex;
justify-content: space-around;
align-items: space-around;
flex-grow: 1;
flex-shrink: 0;
padding: 50px;
}

.left {
display: flex;
flex-direction: column;

}

button {

max-width: 100px;
min-width: none;
color: white;
background-color: rgb(80, 196, 241);
border: none;
text-decoration: none;
padding: 5px;
border-radius: 5px;

}

.section2 {
background-color: #F9FAF8;
display: flex;
justify-content: center;
align-items: center;
gap: 20px;
padding: 40px;
text-align: center;

}

.info img {
max-width: 200px;
width: 200px;
height: 200px;
object-fit: cover;
flex-shrink: 1;
flex-grow: 1;
border-radius: 5px;
border: 3px solid rgb(235, 119, 106); 
gap: 100px;
}

.section2 .info .text {
font-size: 14px;
width: 200px;
gap: 100px;
padding-top: 10px;
}

